<resources>
    <string name="app_name">CIS350App</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Don\'t have an account? Register here</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_no_such_user">This username does not exist</string>
    <string name="error_login">Something went wrong, please try again</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <!-- Strings related to register -->
    <string name="prompt_reg_username">Username</string>
    <string name="prompt_reg_password">Password</string>
    <string name="prompt_school">School</string>
    <string name="prompt_age">Age</string>
    <string name="prompt_gender">Gender/Pronouns</string>
    <string name="action_sign_up_short">Sign up</string>
    <string name="error_register">Something went wrong, please try again</string>
    <string name="error_username_taken">This username is already taken, please choose another one</string>
    <!-- String related to reports -->
    <string name="prompt_report_username">Username</string>
    <string name="prompt_report_name">Name</string>
    <string name="prompt_report_date">Date</string>
    <string name="prompt_report_subject">Subject of Report</string>
    <string name="prompt_report_description">Description of Incident</string>
    <string name="prompt_report_person">Are you reporting on behalf of yourself or a friend?</string>
    <string name="error_field_required">This field is required</string>
    <!-- Strings related to mailbox -->
    <string name="title_notification_list">Notifications</string>
    <string name="title_notification_detail">Notification Detail</string>
    <string name="title_activity_register">Sign up for an account</string>
    <string name="notifications">Notifications</string>
    <string name="search_for_admin">Search for Admin</string>
    <string name="account_settings">Account Settings</string>
    <string name="events">Events</string>
    <string name="log_out">Log out</string>
    <string name="reports">Reports</string>
    <!--Strings related to homepage-->
    <string name="title_homepage">Homepage</string>
    <string name="hp_reports">Reports</string>
    <string name="hp_notifications">Notifications</string>
    <string name="hp_search">Search for Admin</string>
    <string name="hp_events">Events</string>
    <string name="hp_accountsettings">Account Settings</string>
    <string name="hp_logout">Log out</string>
    <!--Strings related to admin profile-->
    <string name="full_name">Full Name</string>
    <string name="role">Role</string>
    <string name="gender">Gender</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="officelocation">Office Location</string>
    <!--Strings related to search-->
    <string name="title_search">Search</string>
    <string-array name="app_name">SearchAdmins</string-array>
    <string-array name="my_admins">
        <item>Michelle Lok</item>
        <item>April Chen</item>
        <item>Chelsey Lin</item>
        <item>Dorothy Chang</item>
    </string-array>
    <string name="search">Search for an administrator below</string>
    <!--Strings related to profile-->
    <string name="title_profile">Profile</string>
    <!--Account settings-->
    <string name="edit">Edit</string>
    <string name="title_settings">Settings</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_report_metrics">report_metrics</string>
</resources>
