<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <TextView
        android:id="@+id/locationText"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_marginStart="46dp"
        android:layout_marginLeft="46dp"
        android:layout_marginTop="53dp"
        android:text=""
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/emailText" />

    <TextView
        android:id="@+id/emailText"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_marginStart="46dp"
        android:layout_marginLeft="46dp"
        android:layout_marginTop="53dp"
        android:text=""
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/phoneText" />

    <TextView
        android:id="@+id/phoneText"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_marginStart="46dp"
        android:layout_marginLeft="46dp"
        android:layout_marginTop="53dp"
        android:text=""
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/genderText" />

    <TextView
        android:id="@+id/genderText"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_marginStart="46dp"
        android:layout_marginLeft="46dp"
        android:layout_marginTop="53dp"
        android:text=""
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/roleText" />

    <TextView
        android:id="@+id/roleText"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_marginStart="46dp"
        android:layout_marginLeft="46dp"
        android:layout_marginTop="53dp"
        android:text=""
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/nameText" />

    <TextView
        android:id="@+id/nameText"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:text=""
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/textView"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:layout_marginTop="56dp"
        android:text="@string/officelocation"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="100dp"
        android:layout_height="73dp"
        android:layout_marginTop="52dp"
        android:text="@string/gender"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:layout_marginTop="56dp"
        android:text="@string/email"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="100dp"
        android:layout_height="69dp"
        android:layout_marginTop="52dp"
        android:text="@string/phone"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:layout_marginTop="52dp"
        android:text="@string/role"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:text="@string/full_name"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp" />

</android.support.constraint.ConstraintLayout>