<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Reports"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <Button
        android:id="@+id/report_list2"
        android:layout_width="395dp"
        android:layout_height="82dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="98dp"
        android:layout_marginBottom="551dp"
        android:background="@color/colorPrimaryDark"
        android:onClick="metrics_action"
        android:text="Metrics"
        android:textAppearance="@style/TextAppearance.AppCompat.Menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/report_list"
        android:layout_width="395dp"
        android:layout_height="82dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="641dp"
        android:background="@color/colorPrimaryDark"
        android:onClick="reports_action"
        android:text="Reports"
        android:textAppearance="@style/TextAppearance.AppCompat.Menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/reports"
        android:layout_width="395dp"
        android:layout_height="83dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="188dp"
        android:layout_marginBottom="460dp"
        android:background="@color/colorPrimaryDark"
        android:onClick="new_report_action"
        android:text="Create Report"
        android:textAppearance="@style/TextAppearance.AppCompat.Menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/notifications"
        android:layout_width="395dp"
        android:layout_height="82dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="279dp"
        android:layout_marginBottom="370dp"
        android:background="@color/colorPrimaryDark"
        android:onClick="notifications_action"
        android:text="@string/hp_notifications"
        android:textAppearance="@style/TextAppearance.AppCompat.Menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/search"
        android:layout_width="395dp"
        android:layout_height="82dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="369dp"
        android:layout_marginBottom="280dp"
        android:background="@color/colorPrimaryDark"
        android:onClick="search_for_admin_action"
        android:text="@string/hp_search"
        android:textAppearance="@style/TextAppearance.AppCompat.Menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/acctsettings"
        android:layout_width="395dp"
        android:layout_height="82dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="550dp"
        android:layout_marginBottom="99dp"
        android:background="@color/colorPrimaryDark"
        android:onClick="acct_settings_action"
        android:text="@string/hp_accountsettings"
        android:textAppearance="@style/TextAppearance.AppCompat.Menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/events"
        android:layout_width="395dp"
        android:layout_height="83dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="459dp"
        android:layout_marginBottom="189dp"
        android:background="@color/colorPrimaryDark"
        android:onClick="events_action"
        android:text="@string/hp_events"
        android:textAppearance="@style/TextAppearance.AppCompat.Menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/logout"
        android:layout_width="395dp"
        android:layout_height="83dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="640dp"
        android:layout_marginBottom="8dp"
        android:onClick="logout_action"
        android:text="@string/hp_logout"
        android:textAppearance="@style/TextAppearance.AppCompat.Menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>